# FastMessagesService

./: .env.template  Dockerfile  alembic.ini  docker-compose.yml  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 7075806851de_.py  ab67871fcf71_.py  d05ec64fe696_.py
app/: config.py  database.py  models.py
src/: __init__.py  config.py  crud.py  main.py  models.py  schemas.py
src/routers/: auth.py  messages.py  websocket.py
src/static/: style.css
src/templates/: index.html  login.html  main.html  register.html
telegram_bot/: Dockerfile  main.py
