[tool.poetry]
name = "fastmessagesservice"
version = "0.1.0"
description = ""
authors = ["CinnamonPie <vonahkahs.s.ved@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
redis = "^5.1.1"
pydantic = "^2.9.2"
celery = "^5.4.0"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
